add footer including social links and link to app.js

--- a/index.html
+++ b/index.html
@@ -80,5 +80,16 @@
           <button type="submit">Submit</button>
         </form>
       </section>
+
+      <footer>
+        <p>&copy; 2024 Vitality Dental Centre. All rights reserved.</p>
+        <div class="social-links">
+            <a href="https://www.facebook.com/profile.php?id=61555133255589&mibextid=ZbWKwL"><img src="https://i.pinimg.com/736x/42/75/49/427549f6f22470ff93ca714479d180c2.jpg" alt="Facebook"></a>
+            <a href="https://www.instagram.com/mathewstanui?igsh=MTh6aDVkY25jdXppOQ=="><img src="https://i.pinimg.com/736x/e3/da/7b/e3da7bd831f33193359f78c86d8c250a.jpg" alt="Instagram"></a>
+            <a href="https://x.com/MathewsTanui_?t=y8js6Q16zbA8qbAVIhOA3w&s=08"><img src="https://i.pinimg.com/736x/2f/b9/09/2fb909b74a854f0715e64dda5825990d.jpg" alt="X"></a>
+        </div>
+    </footer>
+    
+    <script src="app.js"></script>
 </body>
 </html>
